argocd/control-hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-hub
spec:
  ports:
  - port: 80
    targetPort: 7777
  selector:
    app: control-hub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-hub
spec:
  selector:
    matchLabels:
      app: control-hub
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: control-hub
    spec:
      containers:
      - name: control-hub
        image: "charlesdburton/grillbernetes-control-hub:latest"
        args:
        - "-rd=redis.default.svc:6379"
        ports:
        - containerPort: 7777
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-hub
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - control-hub.home.rsmachiner.com
    secretName: control-hub
  rules:
  - host: "control-hub.home.rsmachiner.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: control-hub
            port: 
              number: 80
