argocd/events.yaml
apiVersion: v1
kind: Service
metadata:
  name: events
spec:
  ports:
  - port: 80
    targetPort: 7777
  selector:
    app: events
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events
spec:
  selector:
    matchLabels:
      app: events
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
      - name: events
        image: "charlesdburton/grillbernetes-events:latest"
        args:
        - "-nh=nats://nats.default.svc:4222"
        - "-d=true"
        ports:
        - containerPort: 7777
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 2
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: events
    annotations:
      kubernetes.io/ingress.class: "nginx"
      cert-manager.io/cluster-issuer: "letsencrypt"
      nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  spec:
    tls:
    - hosts:
      - events.home.rsmachiner.com
      secretName: events
    rules:
    - host: "events.home.rsmachiner.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: events
              port:
                number: 80
