argocd/pub-hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: pub-hub
spec:
  ports:
  - port: 80
    targetPort: 7777
  selector:
    app: pub-hub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pub-hub
spec:
  selector:
    matchLabels:
      app: pub-hub
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: pub-hub
    spec:
      containers:
      - name: pub-hub
        image: "charlesdburton/grillbernetes-pub-hub:latest"
        args:
        - "-rd=redis:6379"
        - "-nh=nats://nats-cluster:4222"
        ports:
        - containerPort: 7777
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 7777
          initialDelaySeconds: 10
          periodSeconds: 2
          failureThreshold: 2
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pub-hub
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - pub-hub.home.rsmachiner.com
    secretName: pub-hub
  rules:
  - host: pub-hub.home.rsmachiner.com
    http:
      paths:
      - backend:
          serviceName: pub-hub
          servicePort: 80
